# contact_support

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  docker.env.example  example.env  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: f03af72c2b09_initial_migration.py
src/: settings.py
src/bot/: callbacks.py  dispatcher.py  keyboards.py  scenes.py
src/bot/routers/: __init__.py  action.py  contact.py
src/db/: session.py
src/db/models/: __init__.py  action.py  activity_code.py  base.py  contact.py
src/repositories/: entries.py  enums.py
src/repositories/alchemy/: base_repository.py  repository.py
