[tool.poetry]
name = "contact-support"
version = "0.1.0"
description = ""
authors = ["Фарсиянц Владислав <v.farsiyanc@agora.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
greenlet = "^3.0.3"
aiogram = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
